added initial index view

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,7 +13,7 @@
             <%= f.label :date %>
             <%= f.text_field :date %>
         </p>
-        <%= f.hidden_field :user_id, :value => @user.id %>
+        <%# f.hidden_field :user_id, :value => @user.id %>
         <p>
             <%= f.submit "Create Feedback Form" %>
         </p>
@@ -22,34 +22,35 @@
 </div>
 
 <% @events.each do |event| %>
-
-    <h4 class="eventTitle">
-        <%= link_to event.name, event_path(event)%>
-    </h4>
-    <p>
-        <%= link_to "Get survey link", new_event_response_path(event) %>
-    </p>
-    <div class="editIcon">
-        <%= link_to "Edit", edit_event_path(event) %>
-    </div>
-    <div class="resultsIcon">
-        <%= link_to "See Results", event_path(event) %>
-    </div>
-    <div class="editLessonForm">
-        <!-- this is a form to update the existing lesson (event) -->
-        <%= form_for event do |f| %>
-            <p>
-                <%= f.label :name %>
-                <%= f.text_field :name %>
-            </p>
-            <p>
-                <%= f.label :date %>
-                <%= f.text_field :date %>
-            </p>
-            <%= f.hidden_field :user_id, :value => @user.id %>
-            <p>
-                <%= f.submit "Update Feedback Form" %>
-            </p>
-        <% end %>
+    <div class="lesson-listing">
+        <h4 class="eventTitle">
+            <%= link_to event.name, event_path(event)%>
+        </h4>
+        <p>
+            <%= link_to "Get survey link", new_event_response_path(event) %>
+        </p>
+        <div class="editIcon">
+            <%= link_to "Edit", edit_event_path(event) %>
+        </div>
+        <div class="resultsIcon">
+            <%= link_to "See Results", event_path(event) %>
+        </div>
+        <div class="editLessonForm">
+            <!-- this is a form to update the existing lesson (event) -->
+            <%= form_for event do |f| %>
+                <p>
+                    <%= f.label :name %>
+                    <%= f.text_field :name %>
+                </p>
+                <p>
+                    <%= f.label :date %>
+                    <%= f.text_field :date %>
+                </p>
+                <%= f.hidden_field :user_id, :value => @user.id %>
+                <p>
+                    <%= f.submit "Update Feedback Form" %>
+                </p>
+            <% end %>
+        </div>
     </div>
 <% end %>
