--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,6 @@
 <%= @event.responses.each do |response| %>
-    
-
+<!-- @event.responses.count -->
+<!-- @event.responses.average -->
+<!-- @event.responses.mode -->
+<!-- @event.responses.median -->
 <% end %>
