--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -46,7 +46,7 @@
                     <%= f.label :date %>
                     <%= f.text_field :date %>
                 </p>
-                <%= f.hidden_field :user_id, :value => @user.id %>
+                <%# f.hidden_field :user_id, :value => @user.id %>
                 <p>
                     <%= f.submit "Update Feedback Form" %>
                 </p>
