--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,15 @@
+<h2>GA WDI <%=@event.name %> Lesson Feedback</h2>
+
+<div class="box">
+    <h3 class="graph-title">Average Comfort</h3>
+    Some graph here
+</div>
+
+<div class="box">
+    <h3 class="graph-title">Average Completeness</h3>
+    some graph here
+</div>
+
 <%= @event.responses.each do |response| %>
 <!-- @event.responses.count -->
 <!-- @event.responses.average -->
