--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -1,15 +1,23 @@
 <h2> Add Response </h2>
 
+
 <p>Comfort</p>
-<%= radio_button_tag(:comfort, 1) %> 1
-<%= radio_button_tag(:comfort, 2) %> 2
-<%= radio_button_tag(:comfort, 3) %> 3
-<%= radio_button_tag(:comfort, 4) %> 4
-<%= radio_button_tag(:comfort, 5) %> 5
+<%= radio_button_tag(:comfort_score, 1) %> 1
+<%= radio_button_tag(:comfort_score, 2) %> 2
+<%= radio_button_tag(:comfort_score, 3) %> 3
+<%= radio_button_tag(:comfort_score, 4) %> 4
+<%= radio_button_tag(:comfort_score, 5) %> 5
 
 <p>Completeness</p>
-<%= radio_button_tag(:completeness, 1) %> 1
-<%= radio_button_tag(:completeness, 2) %> 2
-<%= radio_button_tag(:completeness, 3) %> 3
-<%= radio_button_tag(:completeness, 4) %> 4
-<%= radio_button_tag(:completeness, 5) %> 5
+<%= radio_button_tag(:completeness_score, 1) %> 1
+<%= radio_button_tag(:completeness_score, 2) %> 2
+<%= radio_button_tag(:completeness_score, 3) %> 3
+<%= radio_button_tag(:completeness_score, 4) %> 4
+<%= radio_button_tag(:completeness_score, 5) %> 5
+
+<p>Name</p>
+<%= text_field_tag(:name, 'Optional') %>
+
+<p>
+<%= submit_tag 'Submit' %>
+</p>
