updated events and responses controllers to render and route for responses; updated new response form to fix radio button and submit functionality

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,9 +10,8 @@
     some graph here
 </div>
 
-<%= @event.responses.each do |response| %>
-<!-- @event.responses.count -->
-<!-- @event.responses.average -->
-<!-- @event.responses.mode -->
-<!-- @event.responses.median -->
+<% @event.responses.each do |response| %>
+
+<!-- stuff here -->
+
 <% end %>
