added beta bar charts, needs further styling

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,12 +2,12 @@
 
 <div class="box">
     <h3 class="graph-title">Average Comfort</h3>
-    Some graph here
+    <div id="comfort_chart" style="min-width: 280px; height: 360px; margin: 0 auto"></div>
 </div>
 
 <div class="box">
     <h3 class="graph-title">Average Completeness</h3>
-    some graph here
+    <div id="complete_chart" style="min-width: 280px; height: 360px; margin: 0 auto"></div>
 </div>
 
 <% @event.responses.each do |response| %>
