--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -60,3 +60,8 @@
         </div>
     </div>
 <% end %>
+<footer>
+    <p>This application was built in collaboration between GA DC UXDI and WDI students.
+        <!-- Paul Doulatshahi, Mike Dulik, Mostafa Habib, Mark Hannallah, Virginia Ibarra, and Melissa Steffan. -->
+    </p>
+</footer>
