--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,6 +80,20 @@ a {
      color: white;
  }
 
+ footer {
+     margin-top: 20px;
+     height: 60px;
+     text-align: center;
+     background-color: black;
+     color: white;
+     font-family: helvetica;
+     position: absolute;
+     width: 100%;
+     left: 0;
+     /*bottom: 0;*/
+     padding-left: 20px;
+ }
+
 /******************** INDEX VIEW ********************/
 #newLesson {
     margin: 0 auto;
