--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="header">
-        <%= link_to "GENERAL ASSEMBLY WDI", events_path, { :class => "header-text"}%>
+        <div class="logo"></div>
+        <%= link_to "GENERAL ASSEMBLY", events_path, { :class => "header-text"}%>
     </div>
 
 <%= yield %>
