--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -87,11 +87,11 @@ a {
  .logo {
      float:left;
      display: inline-block;
-     margin: 5px 0 0 5px;
-     height: 3rem;
-     width: 5%;
+     margin: 5px 5px 0 5px;
+     height: 50px;
+     width: 50px;
      background-image: url("http://challenges.s3.amazonaws.com/mta-app-quest/GA_logo.png");
-     background-size: contain;
+     background-size: cover;
      background-repeat: no-repeat;
  }
 
@@ -192,14 +192,17 @@ button {
 }
 
 @media (max-width: 1180px) {
-    .lesson-listing{
+    .surveyLink{
+        width: 100%;
+    }
+    #newLessonForm{
         width: 100%;
     }
 
 }
 
-@media (max-width: 600px){
-    .surveyLink {
+@media (max-width: 700px){
+    .lesson-listing {
         width: 100%;
     }
 }
