--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -293,3 +293,27 @@ input[type="submit"]:hover{
     width: 30%;
     margin: 0 auto;
 }
+
+@media (max-width: 1100px){
+    .score {
+        display: block;
+        margin: 10px auto;
+    }
+}
+
+@media (max-width: 1100px){
+    .score {
+        display: block;
+        margin: 10px auto;
+    }
+}
+
+
+@media (max-width: 700px){
+    .score {
+        width: 100%;
+    }
+    .name-box {
+        width: 100%;
+    }
+}
