--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -38,7 +38,7 @@
     </div>
     <%# f.hidden_field :event_id, :value => @event.id %>
     <div class="name-box">
-        <p>Add additional comments here.</p>
+        <p>Add any additional comments or notes here.</p>
         <%= f.text_area :comment %>
     </div>
 
