--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,17 +1,19 @@
+<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+
 <h2>GA WDI <%=@event.name %> Lesson Feedback</h2>
 
 <div class="box">
-    <h3 class="graph-title">Average Comfort</h3>
-    <div id="comfort_chart" style="min-width: 280px; height: 360px; margin: 0 auto"></div>
+    <h3 class="graph-title">Comfort</h3>
+    <%= column_chart @responses.group(:comfort_score).count %>
 </div>
 
 <div class="box">
-    <h3 class="graph-title">Average Completeness</h3>
-    <div id="complete_chart" style="min-width: 280px; height: 360px; margin: 0 auto"></div>
+    <h3 class="graph-title">Completeness</h3>
+    <%= column_chart @responses.group(:completeness_score).count %>
 </div>
 
-<% @event.responses.each do |response| %>
+<!-- # <% @event.responses.each do |response| %> -->
 
 <!-- stuff here -->
-<%= response.comfort_score %>
-<% end %>
+<!-- # <%= response.comfort_score %>
+# <% end %> -->
