--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -33,7 +33,7 @@
         </p>
         <div class="copy icon surveyLink">Copy link to clipboard
 
-            <div class="hidden-link">http://localhost:3000<%= new_event_response_path(event) %></div>
+            <div class="hidden-link">Please take 1 minute to offer feedback on the <%= event.name %> lesson: http://localhost:3000<%= new_event_response_path(event) %></div>
         </div>
         <div class="icon editForm"> Edit
             <div class="showLessonForm">
