--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<h2>GA WDI Lessons</h2>
+<h2>GA WDI LESSONS</h2>
 
 <div id="newLesson">
     <h3>(+) Add new lesson</h3>
@@ -35,7 +35,7 @@
 
             <div class="hidden-link">Please take 1 minute to offer feedback on the <%= event.name %> lesson: http://localhost:3000<%= new_event_response_path(event) %></div>
         </div>
-        <div class="icon editForm"> Edit
+        <div class="icon editForm"> Edit the lesson
             <div class="showLessonForm">
                 <!-- this is a form to update the existing lesson (event) -->
                 <%= form_for event do |f| %>
