--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -123,7 +123,7 @@ a {
      padding-left: 20px;
  }
 
-/******************** INDEX VIEW *******************/
+/******************* INDEX VIEW *******************/
 #newLesson {
     margin: 0 auto;
     font-size: .75em;
