--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -115,7 +115,7 @@ a {
      text-align: center;
      background-color: black;
      color: white;
-     font-family: helvetica;
+     font-family: "Circular";
      position: fixed;
      width: 100%;
      left: 0;
