--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -116,9 +116,8 @@ a {
      background-color: black;
      color: white;
      font-family: "Circular";
-     position: fixed;
+     position: relative;
      width: 100%;
-     left: 0;
      bottom: 0;
      padding-left: 20px;
  }
