--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,8 +12,20 @@
     <%= column_chart @responses.group(:completeness_score).count %>
 </div>
 
-<!-- # <% @event.responses.each do |response| %> -->
 
-<!-- stuff here -->
-<!-- # <%= response.comfort_score %>
-# <% end %> -->
+<button id="showComments"><h4>Student Comments</h4></button>
+<div class="comments-list">
+     <% @event.responses.each do |response| %>
+
+    <div class="comment name-box">
+        <% if response.name == "" %>
+            Anonymous:
+        <% else %>
+            <%= response.name %>:
+
+        <% end %>
+        <%= response.comment %>
+    </div>
+
+    <% end %>
+</div>
