--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,12 +1,12 @@
 <h2>GA WDI <%=@event.name %> Lesson Feedback</h2>
 
-<button type="button" class="line">Line Graph</button>
-<button type="button" class="pie">Pie Graph</button>
-<button type="button" class="column">Column Graph</button>
-<button type="button" class="bar">Bar Graph</button>
+<button type="button" class="graph-button line">Line Graph</button>
+<button type="button" class="graph-button pie">Pie Graph</button>
+<button type="button" class="graph-button column">Column Graph</button>
+<button type="button" class="graph-button bar">Bar Graph</button>
 
 <div class="box">
-    <h3 class="graph-title comfort_title">Comfort</h3>
+    <h3 class="graph-title">Comfort</h3>
     <div class="graph line">
       <%= line_chart @responses.group(:comfort_score).count %>
     </div>
@@ -22,7 +22,7 @@
 </div>
 
 <div class="box">
-    <h3 class="graph-title complete_title">Completeness</h3>
+    <h3 class="graph-title">Completeness</h3>
     <div class="graph line">
       <%= line_chart @responses.group(:completeness_score).count %>
     </div>
