--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+<%= javascript_include_tag "application", "chartkick" %>
+
 <h2>GA WDI <%=@event.name %> Lesson Feedback</h2>
 
 <button type="button" class="graph-button line">Line Graph</button>
