--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,7 @@
   <title>Nananananonymous</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-  <%= javascript_include_tag "application", "chartkick" %>
+
   <%= csrf_meta_tags %>
 
   <!-- <script src="http://code.jquery.com/jquery-1.9.1.js"></script> -->
@@ -18,7 +17,7 @@
     </div>
 
 <%= yield %>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 
 </body>
 </html>
