--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 <%= yield %>
 <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 
-<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-<%= javascript_include_tag "application", "chartkick" %>
+<%# javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+<%# javascript_include_tag "application", "chartkick" %>
 </body>
 </html>
