--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag "//www.google.com/jsapi" %>
+<%= javascript_include_tag "application", "chartkick" %>
 
 <h2>GA WDI <%=@event.name %> Lesson Feedback</h2>
 
