--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,6 @@
-
+<% content_for :head do %>
+    <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+<% end %>
 
 <h2>GA WDI <%=@event.name %> Lesson Feedback</h2>
 
