--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,10 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <%= javascript_include_tag "//www.google.com/jsapi" %>
-  <%= javascript_include_tag "application", "chartkick" %>
+  <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+
+
+
   <!-- <script src="http://code.jquery.com/jquery-1.9.1.js"></script> -->
 </head>
 <body>
@@ -17,9 +19,6 @@
     </div>
 
 <%= yield %>
-<!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 
-<%# javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-<%# javascript_include_tag "application", "chartkick" %>
 </body>
 </html>
