--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -104,7 +104,7 @@ a {
      margin: 5px 5px 0 5px;
      height: 50px;
      width: 50px;
-     background-image: url("https://challenges.s3.amazonaws.com/mta-app-quest/GA_logo.png");
+     background-image: url("//challenges.s3.amazonaws.com/mta-app-quest/GA_logo.png");
      background-size: cover;
      background-repeat: no-repeat;
  }
