--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,41 +1,34 @@
 
 <h2>GA WDI <%=@event.name %> Lesson Feedback</h2>
-
-<button type="button" class="graph-button line">Line Graph</button>
-<button type="button" class="graph-button pie">Pie Graph</button>
-<button type="button" class="graph-button column">Column Graph</button>
-<button type="button" class="graph-button bar">Bar Graph</button>
-
+<div class="button-wrapper">
+    <div class="button-holder">
+        <button type="button" class="graph-button pie">Pie Graph</button>
+    </div>
+    <div class="button-holder">
+        <button type="button" class="graph-button column">Column Graph</button>
+    </div>
+</div>
 <div class="box">
     <h3 class="graph-title">Comfort</h3>
-    <div class="graph line">
-      <%= line_chart @responses.group(:comfort_score).count %>
-    </div>
+
     <div class="graph pie">
       <%= pie_chart @responses.group(:comfort_score).count %>
     </div>
     <div class="graph column">
       <%= column_chart @responses.group(:comfort_score).count %>
     </div>
-    <div class="graph bar">
-      <%= bar_chart @responses.group(:comfort_score).count %>
-    </div>
 </div>
 
 <div class="box">
     <h3 class="graph-title">Completeness</h3>
-    <div class="graph line">
-      <%= line_chart @responses.group(:completeness_score).count %>
-    </div>
+
     <div class="graph pie">
       <%= pie_chart @responses.group(:completeness_score).count %>
     </div>
     <div class="graph column">
       <%= column_chart @responses.group(:completeness_score).count %>
     </div>
-    <div class="graph bar">
-      <%= bar_chart @responses.group(:completeness_score).count %>
-    </div>
+
 </div>
 
 
